--- a/style.css
+++ b/style.css
@@ -6,38 +6,32 @@
 body{
     padding: 2rem;
     background-color: rgb(181, 210, 255);
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 #container{
-    width: 25rem;
-    height: auto;
+    max-width: 20rem;
     background-color: white;
     padding: 1rem;
     border-radius: 20px;
 
 }
 img{
-    width: 100%;
+    max-width: 100%;
     height: auto;
     border-radius: 20px;
+    display: block;
 }
 h2{
     margin: 20px;
     color: rgb(1, 0, 0);
-    text-align: center;
+   
 }
 p{
     color: gray;
-    text-align: center;
+  
 }
 
-@media  screen and (max-width: 1440px){
-   
-}
-@media screen and (max-width:375px) {
-  h2{
-    color: green;
-  }
-}
